--- a/result/2022-07-21.md
+++ b/result/2022-07-21.md
@@ -43,6 +43,7 @@
 43. [中国男篮失误](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%A4%B1%E8%AF%AF%23&Refer=top) 142490
 44. [想念赵继伟](https://s.weibo.com//weibo?q=%E6%83%B3%E5%BF%B5%E8%B5%B5%E7%BB%A7%E4%BC%9F&Refer=top) 121451
 45. [宁波象山超美蓝眼泪](https://s.weibo.com//weibo?q=%23%E5%AE%81%E6%B3%A2%E8%B1%A1%E5%B1%B1%E8%B6%85%E7%BE%8E%E8%93%9D%E7%9C%BC%E6%B3%AA%23&Refer=top) 117687
-46. [上海近30年老牌蛋糕房大门紧闭](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E8%BF%9130%E5%B9%B4%E8%80%81%E7%89%8C%E8%9B%8B%E7%B3%95%E6%88%BF%E5%A4%A7%E9%97%A8%E7%B4%A7%E9%97%AD%23&Refer=top) 68093
+46. [上海近30年老牌蛋糕房大门紧闭](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E8%BF%9130%E5%B9%B4%E8%80%81%E7%89%8C%E8%9B%8B%E7%B3%95%E6%88%BF%E5%A4%A7%E9%97%A8%E7%B4%A7%E9%97%AD%23&Refer=top) 76180
 47. [阿尔卑斯山最大冰川或30年内消失](https://s.weibo.com//weibo?q=%23%E9%98%BF%E5%B0%94%E5%8D%91%E6%96%AF%E5%B1%B1%E6%9C%80%E5%A4%A7%E5%86%B0%E5%B7%9D%E6%88%9630%E5%B9%B4%E5%86%85%E6%B6%88%E5%A4%B1%23&Refer=top) 51287
-48. [有点眼红现在小孩的玩具](https://s.weibo.com//weibo?q=%23%E6%9C%89%E7%82%B9%E7%9C%BC%E7%BA%A2%E7%8E%B0%E5%9C%A8%E5%B0%8F%E5%AD%A9%E7%9A%84%E7%8E%A9%E5%85%B7%23&Refer=top) 14776
+48. [有点眼红现在小孩的玩具](https://s.weibo.com//weibo?q=%23%E6%9C%89%E7%82%B9%E7%9C%BC%E7%BA%A2%E7%8E%B0%E5%9C%A8%E5%B0%8F%E5%AD%A9%E7%9A%84%E7%8E%A9%E5%85%B7%23&Refer=top) 19372
+49. [丹东一医院数月未发工资](https://s.weibo.com//weibo?q=%23%E4%B8%B9%E4%B8%9C%E4%B8%80%E5%8C%BB%E9%99%A2%E6%95%B0%E6%9C%88%E6%9C%AA%E5%8F%91%E5%B7%A5%E8%B5%84%23&Refer=top) 10679
