--- a/result/2022-07-22.md
+++ b/result/2022-07-22.md
@@ -39,3 +39,5 @@
 39. [四川理县发生3.3级地震](https://s.weibo.com//weibo?q=%E5%9B%9B%E5%B7%9D%E7%90%86%E5%8E%BF%E5%8F%91%E7%94%9F3.3%E7%BA%A7%E5%9C%B0%E9%9C%87&Refer=top) 127871
 40. [成都警方通报男子小区内跳楼身亡](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E8%AD%A6%E6%96%B9%E9%80%9A%E6%8A%A5%E7%94%B7%E5%AD%90%E5%B0%8F%E5%8C%BA%E5%86%85%E8%B7%B3%E6%A5%BC%E8%BA%AB%E4%BA%A1%23&Refer=top) 117596
 41. [零基础学拉丁舞的体验](https://s.weibo.com//weibo?q=%23%E9%9B%B6%E5%9F%BA%E7%A1%80%E5%AD%A6%E6%8B%89%E4%B8%81%E8%88%9E%E7%9A%84%E4%BD%93%E9%AA%8C%23&Refer=top) 105437
+42. [西双版纳震感](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%8F%8C%E7%89%88%E7%BA%B3%E9%9C%87%E6%84%9F&Refer=top) 64713
+43. [缅甸5.9级地震](https://s.weibo.com//weibo?q=%E7%BC%85%E7%94%B85.9%E7%BA%A7%E5%9C%B0%E9%9C%87&Refer=top) 39274
